--- a/templates/signin.html
+++ b/templates/signin.html
@@ -11,13 +11,12 @@
         <h2>Sign In</h2>
 
         {% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <div class="flash-message">
-      {{ messages[0] }}
-    </div>
-  {% endif %}
-{% endwith %}
-
+          {% if messages %}
+            <div class="flash-message">
+              {{ messages[0] }}
+            </div>
+          {% endif %}
+        {% endwith %}
 
         <form action="{{ url_for('signin') }}" method="POST">
             <label for="email">Email</label>
@@ -29,7 +28,7 @@
             <button type="submit">Sign In</button>
 
             <div class="forgot-password">
-                <a href="#">Forgot Password?</a>
+                <a href="{{ url_for('forgot_password') }}">Forgot Password?</a>
             </div>
         </form>
     </div>
